--- a/Angular7/first-ng-cli/src/app/employees/employee-details/employee-details.component.html
+++ b/Angular7/first-ng-cli/src/app/employees/employee-details/employee-details.component.html
@@ -1,3 +1,46 @@
-<p>
-  employee-details works!
-</p>
+<h1 [innerText]="title+employee.employeeName"></h1>
+<br>
+<table class="table table-hover table-striped">
+  <tbody>
+    <tr>
+      <th>Employee ID </th>
+      <td><span [innerText]="employee.employeeId"></span></td>
+    </tr>
+    <tr>
+      <th>Employee Name </th>
+      <td><span [innerText]="employee.employeeName"></span></td>
+    </tr>
+    <tr>
+      <th>Employee Address </th>
+      <td><span [innerText]="employee.address"></span></td>
+    </tr>
+    <tr>
+      <th>Employee city </th>
+      <td><span [innerText]="employee.city"></span></td>
+    </tr>
+    <tr>
+      <th>Employee country </th>
+      <td><span [innerText]="employee.country"></span></td>
+    </tr>
+    <tr>
+      <th>Employee phone </th>
+      <td><span [innerText]="employee.phone"></span></td>
+    </tr>
+    <tr>
+      <th>Employee email </th>
+      <td><span [innerText]="employee.email"></span></td>
+    </tr>
+    <tr>
+      <th>Employee skillSets </th>
+      <td><span [innerText]="employee.skillSets"></span></td>
+    </tr>
+    <tr>
+      <th>Employee avatar </th>
+      <td><img [src]="employee.avatar" [alt]="employee.employeeName"></td>
+    </tr>
+    <tr>
+      <th>Employee platform </th>
+      <td><span [innerText]="employee.platform"></span></td>
+    </tr>
+  </tbody>
+</table>
