--- a/Angular7/first-ng-cli/src/app/events/event-deails/event-deails.component.html
+++ b/Angular7/first-ng-cli/src/app/events/event-deails/event-deails.component.html
@@ -1,3 +1,39 @@
-<p>
-  event-deails works!
-</p>
+<h1 [innerText]="title+event.eventName"></h1>
+
+<table class="table table-hover table-striped">
+  <tbody>
+    <tr>
+      <th>Event eventCode</th>
+      <td><span [innerText] = "event.eventCode"></span></td>
+    </tr>
+    <tr>
+      <th>Event eventName</th>
+      <td><span [innerText] = "event.eventName"></span></td>
+    </tr>
+    <tr>
+      <th>Event description</th>
+      <td><span [innerText] = "event.description"></span></td>
+    </tr>
+    <tr>
+      <th>Event startDate</th>
+      <td><span [innerText] = "event.startDate"></span></td>
+    </tr>
+    <tr>
+      <th>Event endDate</th>
+      <td><span [innerText] = "event.endDate"></span></td>
+    </tr>
+    <tr>
+      <th>Event fees</th>
+      <td><span [innerText] = "event.fees"></span></td>
+    </tr>
+    <tr>
+      <th>Event seatsFilled</th>
+      <td><div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" [style.width]="event.seatsFilled+'%'" 
+        ></div>
+      </div></td>
+    </tr>
+
+  </tbody>
+</table>
