--- a/Angular7/first-ng-cli/src/app/app.component.html
+++ b/Angular7/first-ng-cli/src/app/app.component.html
@@ -1,2 +1,4 @@
-<!-- <employees-list></employees-list>
- --><events-list></events-list>
+<!-- <employees-list></employees-list>-->
+
+<sep-menu></sep-menu> 
+<events-list></events-list> 
