--- a/Angular7/first-ng-cli/src/app/events/event-deails/event-deails.component.html
+++ b/Angular7/first-ng-cli/src/app/events/event-deails/event-deails.component.html
@@ -4,27 +4,19 @@
   <tbody>
     <tr>
       <th>Event eventCode</th>
-      <td><span [innerText] = "event.eventCode"></span></td>
+      <td><span [innerText] = "event.eventCode | lowercase"></span></td>
     </tr>
     <tr>
       <th>Event eventName</th>
-      <td><span [innerText] = "event.eventName"></span></td>
+      <td><span [innerText] = "event.eventName | uppercase"></span></td>
     </tr>
     <tr>
       <th>Event description</th>
-      <td><span [innerText] = "event.description"></span></td>
+      <td><span [innerText] = "event.description "></span></td>
     </tr>
     <tr>
       <th>Event startDate</th>
       <td><span [innerText] = "event.startDate"></span></td>
-    </tr>
-    <tr>
-      <th>Event endDate</th>
-      <td><span [innerText] = "event.endDate"></span></td>
-    </tr>
-    <tr>
-      <th>Event fees</th>
-      <td><span [innerText] = "event.fees"></span></td>
     </tr>
     <tr>
       <th>Event seatsFilled</th>
